# WiseRiders

./: .gitignore  README.md  justfile
android/: bun.lockb  package.json
android/src/: app.html
android/src-tauri/: Cargo.toml  tauri.conf.json
android/src-tauri/capabilities/: default.json
android/src-tauri/src/: lib.rs  main.rs
android/src/routes/: +page.svelte
backend/: Cargo.toml  Dockerfile  README.md  cross.toml  pre_build.sh
backend/src/: main.rs
chip/MXChip/AZ3166/: flash.sh  protbuf_generation.txt
chip/MXChip/AZ3166/app/: CMakeLists.txt  board_init.c  board_init.h  buttons.h  cloud_config.h  icon_font.c  icon_font.h  main.c  mqtt.c  mqtt.h  mqtt_client.c  mqtt_client.h  read_sensors.c  screen.c  screen.h  shared.h  uattributes.pb.c  uattributes.pb.h  ucode.pb.c  ucode.pb.h  umessage.pb.c  umessage.pb.h  uoptions.pb.c  uoptions.pb.h  uri.pb.c  uri.pb.h  uuid.pb.c  uuid.pb.h
chip/MXChip/AZ3166/scripts/: build.bat  deploy.bat
documentation/: README.md  building_blocks.md  function_flow.md
