# /********************************************************************************
#  * Copyright (c) 2024 Contributors to the Eclipse Foundation
#  *
#  * See the NOTICE file(s) distributed with this work for additional
#  * information regarding copyright ownership.
#  *
#  * This program and the accompanying materials are made available under the
#  * terms of the Apache License Version 2.0 which is available at
#  * https://www.apache.org/licenses/LICENSE-2.0
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  ********************************************************************************/

[package]
name = "uprotocol_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
up-client-mqtt5-rust = { path = "up-transport-mqtt/" }
up-rust = { version = "0.2.0", default-features = false }
tokio = { version = "1.35.1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time"] }
env_logger = { version = "0.10.1" }
log = { version = "0.4.20" }
async-trait = { version = "0.1" }
flume = "0.11.0"
paho-mqtt = "0.12.5"
protobuf = { version = "3.7.1", features = ["bytes"] }
once_cell = "1.20.2"
